--- a/Aplicacion web/SimRend/SimRend/Views/Usuario/ActualizarPerfilDirector.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Usuario/ActualizarPerfilDirector.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Actualizar usuario director";
+    ViewData["Title"] = "Editar perfil usuario director";
 }
 
 <div class="br-pagetitle row">
@@ -7,7 +7,7 @@
         <div class="input-group-prepend">
             <div class="input-group-text wd-auto" style="border:none;">
                 <i class="icon ion-person-stalker"></i>
-                <h4 style="padding-left:5%">Actualizar usuario director</h4>
+                <h4 style="padding-left:5%">Editar perfil usuario director</h4>
             </div>
         </div>
     </div>
@@ -42,12 +42,12 @@
                                 <i class="fas fa-at tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
                         </div>
-                        <input autocomplete="off" name="email" required="required" class="form-control" id="email" type="email" placeholder="Ingrese el email del usuario director" onkeypress="" data-parsley-errors-container="#errorEmail">
+                        <input autocomplete="off" name="email" required="required" class="form-control" id="email" type="email" placeholder="Ingrese el email del usuario director" onkeypress="" data-parsley-errors-container="#errorEmail" readonly>
                     </div>
                     <div id="errorEmail"></div>
                 </div>
 
-                <div class="form-group wd-auto col-sm-12 col-lg-6">
+                @*<div class="form-group wd-auto col-sm-12 col-lg-6">
                     <label class="form-control-label">Clave (Modifique este campo solo si reseteará): </label>
                     <div class="input-group">
                         <div class="input-group-prepend">
@@ -61,9 +61,9 @@
                         </div>
                     </div>
                     <div id="errorClave"></div>
-                </div>
+                </div>*@
 
-                <div class="form-group wd-auto col-lg-6 col-md-12">
+                <div class="form-group wd-auto col-lg-12 col-md-12">
                     <label class="form-control-label">Sexo: </label>
                     <div class="input-group parsley-select" id="sexoMarco">
                         <div class="input-group-prepend">
@@ -110,7 +110,7 @@
             <div class="form-layout-footer">
                 <div class="row" id="acciones">
                     <div class="form-group  col-lg-6 col-md-6 col-sm-12">
-                        <button class="btn btn-secondary" id="guardar" style="width:100%" onclick="volverDirectores()">
+                        <button class="btn btn-secondary" id="guardar" style="width:100%" onclick="volverProcesos()">
                             <i class="fas fa-window-close"></i> Cancelar
                         </button>
                     </div>
