--- a/Aplicacion web/SimRend/SimRend/Views/Usuario/ActualizarPerfilRepresentante.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Usuario/ActualizarPerfilRepresentante.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Actualizar usuario representante";
+    ViewData["Title"] = "Editar perfil usuario representante";
 }
 
 <div class="br-pagetitle row">
@@ -7,7 +7,7 @@
         <div class="input-group-prepend">
             <div class="input-group-text wd-auto" style="border:none;">
                 <i class="icon ion-person-stalker"></i>
-                <h4 style="padding-left:5%">Actualizar usuario representante</h4>
+                <h4 style="padding-left:5%">Editar perfil usuario representante</h4>
             </div>
         </div>
     </div>
@@ -66,28 +66,28 @@
                                 <i class="fas fa-at tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
                         </div>
-                        <input autocomplete="off" name="email" required="required" class="form-control" id="email" type="email" placeholder="Ingrese el email del usuario representante" onkeypress="" data-parsley-errors-container="#errorEmail">
+                        <input autocomplete="off" name="email" required="required" class="form-control" id="email" type="email" placeholder="Ingrese el email del usuario representante" onkeypress="" data-parsley-errors-container="#errorEmail" readonly>
                     </div>
                     <div id="errorEmail"></div>
                 </div>
 
-                <div class="form-group wd-auto col-sm-12 col-lg-6">
-                    <label class="form-control-label">Clave (Modifique este campo solo si reseteará): </label>
+                @*<div class="form-group wd-auto col-sm-12 col-lg-6">
+                    <label class="form-control-label">clave (modifique este campo solo si reseteará): </label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text wd-xs-45">
                                 <i class="fas fa-key tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
                         </div>
-                        <input autocomplete="new-password" name="clave" required="required" class="form-control" id="clave" type="password" placeholder="Ingrese la clave del usuario representante" onkeypress="" data-parsley-errors-container="#errorClave">
+                        <input autocomplete="new-password" name="clave" required="required" class="form-control" id="clave" type="password" placeholder="ingrese la clave del usuario representante" onkeypress="" data-parsley-errors-container="#errorclave">
                         <div class="input-group-append">
-                            <button type="button" id="verClave" class="btn btn-info btn-flat" onclick="mostrarClave()"><span id="iconoClave" class="fa fa-eye-slash icon"></span></button>
+                            <button type="button" id="verclave" class="btn btn-info btn-flat" onclick="mostrarclave()"><span id="iconoclave" class="fa fa-eye-slash icon"></span></button>
                         </div>
                     </div>
-                    <div id="errorClave"></div>
-                </div>
+                    <div id="errorclave"></div>
+                </div>*@
 
-                <div class="form-group wd-auto col-lg-6 col-md-12">
+                <div class="form-group wd-auto col-lg-12 col-md-12">
                     <label class="form-control-label">Sexo: </label>
                     <div class="input-group parsley-select" id="sexoMarco">
                         <div class="input-group-prepend">
@@ -174,7 +174,7 @@
             <div class="form-layout-footer">
                 <div class="row" id="acciones">
                     <div class="form-group  col-lg-6 col-md-6 col-sm-12">
-                        <button class="btn btn-secondary" id="guardar" style="width:100%" onclick="volverRepresentantes()">
+                        <button class="btn btn-secondary" id="guardar" style="width:100%" onclick="volverProcesos()">
                             <i class="fas fa-window-close"></i> Cancelar
                         </button>
                     </div>
